query the db for topics and display all the topics on the topics index page. Make it linkable to the show page

--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,1 +1,6 @@
-Hello
+<h1>Topics</h1>
+<ul>
+  <% @topics.each do |topic| %>
+    <li><%= link_to topic, topic_path(topic) %></li>
+  <% end %>
+</ul>
