fix some foundation classes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,16 +12,16 @@
   </head>
 
   <body>
-    <nav class="top-bar foundation-bar" data-topbar>
-      <ul class="title-area">
-        <li class="name">
-          <h1>
+    <nav class="top-bar">
+      <div class="top-bar-left">
+        <ul class="dropdown menu" data-dropdown-menu>
+          <li class="menu-text">
             <a href="/">RateIt</a>
-          </h1>
-        </li>
-      </ul>
-      <section class="top-bar-section">
-        <ul class="right">
+          </li>
+        </ul>
+      </div>
+      <section class="top-bar-right">
+        <ul class="menu">
           <li>
             <%= link_to 'manage topics', '/admin' %>
           </li>
