--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -9,5 +9,6 @@
   </div>
   <div class="columns medium-6">
     <h3>Comments</h3>
+    <%= react_component('Comment', {author: 'SH', body: 'the future of positions', rank: 2}) %>
   </div>
 </div>
