--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -9,6 +9,6 @@
   </div>
   <div class="columns medium-6">
     <h3>Comments</h3>
-    <%= react_component('Comment', {author: 'SH', body: 'the future of positions', rank: 2}) %>
+    <%= react_component('CommentList', {comments: raw( render(template: 'comments/index.json.jbuilder')) }) %>
   </div>
 </div>
